@@ -4,16 +4,20 @@ import com.robertx22.age_of_exile.database.data.spells.components.MapHolder;
 import com.robertx22.age_of_exile.database.data.spells.components.actions.ExileEffectAction.GiveOrTake;
 import com.robertx22.age_of_exile.database.data.spells.components.tooltips.ICTextTooltip;
 import com.robertx22.age_of_exile.database.data.spells.spell_classes.SpellCtx;
+import com.robertx22.age_of_exile.mixin_ducks.StatusEffectAccesor;
 import com.robertx22.age_of_exile.saveclasses.gearitem.gear_bases.TooltipInfo;
 import net.minecraft.entity.LivingEntity;
 import net.minecraft.entity.effect.StatusEffect;
 import net.minecraft.entity.effect.StatusEffectInstance;
+import net.minecraft.entity.effect.StatusEffectType;
 import net.minecraft.text.LiteralText;
 import net.minecraft.text.MutableText;
 import net.minecraft.util.registry.Registry;
 
 import java.util.Arrays;
 import java.util.Collection;
+import java.util.List;
+import java.util.stream.Collectors;
 
 import static com.robertx22.age_of_exile.database.data.spells.map_fields.MapField.*;
 
@@ -27,16 +31,22 @@ public class PotionAction extends SpellAction implements ICTextTooltip {
     public MutableText getText(TooltipInfo info, MapHolder data) {
         MutableText text = new LiteralText("");
 
-        StatusEffect potion = data.getPotion();
         GiveOrTake action = data.getPotionAction();
 
         if (action == GiveOrTake.GIVE_STACKS) {
+            StatusEffect potion = data.getPotion();
             text.append("Gives ");
-        } else {
-            text.append("Removes ");
-        }
+            text.append(potion.getName());
 
-        text.append(potion.getName());
+        } else if (action == GiveOrTake.REMOVE_STACKS) {
+            StatusEffect potion = data.getPotion();
+            text.append("Removes ");
+            text.append(potion.getName());
+        } else {
+            int count = data.getOrDefault(COUNT, 1D)
+                .intValue();
+            text.append("Removes " + count + " negative effects");
+        }
 
         return text;
 
@@ -45,20 +55,48 @@ public class PotionAction extends SpellAction implements ICTextTooltip {
     @Override
     public void tryActivate(Collection<LivingEntity> targets, SpellCtx ctx, MapHolder data) {
 
-        StatusEffect potion = data.getPotion();
-        GiveOrTake action = data.getPotionAction();
+        try {
+            GiveOrTake action = data.getPotionAction();
 
-        targets.forEach(t -> {
-            if (action == GiveOrTake.GIVE_STACKS) {
-                int dura = data.get(POTION_DURATION)
-                    .intValue();
-                int str = data.getOrDefault(POTION_STRENGTH, 1D)
-                    .intValue();
-                t.addStatusEffect(new StatusEffectInstance(potion, dura, str));
-            } else {
-                t.removeStatusEffect(potion);
+            for (LivingEntity t : targets) {
+                if (action == GiveOrTake.GIVE_STACKS) {
+                    StatusEffect potion = data.getPotion();
+
+                    int dura = data.get(POTION_DURATION)
+                        .intValue();
+                    int str = data.getOrDefault(POTION_STRENGTH, 1D)
+                        .intValue();
+                    t.addStatusEffect(new StatusEffectInstance(potion, dura, str));
+                } else if (action == GiveOrTake.REMOVE_STACKS) {
+                    StatusEffect potion = data.getPotion();
+
+                    t.removeStatusEffect(potion);
+                } else if (action == GiveOrTake.REMOVE_NEGATIVE) {
+                    int count = data.getOrDefault(COUNT, 1D)
+                        .intValue();
+
+                    for (int i = 0; i < count; i++) {
+
+                        List<StatusEffectInstance> opt = t.getStatusEffects()
+                            .stream()
+                            .filter(x -> {
+                                StatusEffectAccesor acc = (StatusEffectAccesor) x.getEffectType();
+                                return acc.my$getstatusEffectType() == StatusEffectType.HARMFUL;
+                            })
+                            .collect(Collectors.toList());
+
+                        if (!opt.isEmpty()) {
+                            t.removeStatusEffect(opt.get(0)
+                                .getEffectType());
+                        }
+                    }
+
+                }
+
             }
-        });
+        } catch (Exception e) {
+            e.printStackTrace();
+        }
     }
 
     public MapHolder createGive(StatusEffect effect, Double duration) {
@@ -69,6 +107,14 @@ public class PotionAction extends SpellAction implements ICTextTooltip {
         dmg.put(POTION_ACTION, GiveOrTake.GIVE_STACKS.name());
         dmg.put(POTION_ID, Registry.STATUS_EFFECT.getId(effect)
             .toString());
+        return dmg;
+    }
+
+    public MapHolder removeNegative(Double count) {
+        MapHolder dmg = new MapHolder();
+        dmg.type = GUID();
+        dmg.put(COUNT, count);
+        dmg.put(POTION_ACTION, GiveOrTake.REMOVE_NEGATIVE.name());
         return dmg;
     }
 
