@@ -24,6 +24,7 @@ public class StatSerializers {
         map.put(PerSpellDamageStat.SER_ID, new SpellStatSer<>(x -> new PerSpellDamageStat(x)));
         map.put(PerSpellManaCostStat.SER_ID, new SpellStatSer<>(x -> new PerSpellManaCostStat(x)));
         map.put(PerSpellProjectileSpeedStat.SER_ID, new SpellStatSer<>(x -> new PerSpellProjectileSpeedStat(x)));
+        map.put(PerSpellRestorationStat.SER_ID, new SpellStatSer<>(x -> new PerSpellRestorationStat(x)));
 
     }
 
