@@ -26,7 +26,7 @@ E,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,E
 E,,,,,,,,,,,,,,,,,,,,mana,,,,,,magic_shield,,,,,,,,,,,,,,,,,,,,,,,,,,,,,E
 E,,,,,,,,,,,,,,,,,,,O,,O,,,,O,,O,,,,,,,,,,,,,,,,,,,,,,,,,,,,E
 E,,,,,,,,,,,,,,,,,,magic_bomb,,,mana,O,start,O,magic_shield,,,arcane_comet,,,,,,,,,,,,,,,,,,,,,,,,,,,E
-E,,,,,,,,,,,,,,,,,,,O,,O,,,,O,,O,,,arcane_comet_mana_cost,,,,,,,,,,,,,,,,,,,,,,,,,E
+E,,,,,,,,,,,,,,,,,,,O,,O,,,,O,,O,,,,,,,,,,,,,,,,,,,,,,,,,,,,E
 E,,,,,,,,,,,,,,,,,,,,mana,,,,,,magic_shield,,,,,,,,,,,,,,,,,,,,,,,,,,,,,E
 E,,,,,,,,,,,,,,,,,,,O,O,,,,,,O,O,,,,,,,,,,,,,,,,,,,,,,,,,,,,E
 E,,,,,,,,,,,,,,mana,O,int,O,int,,O,,,[CENTER],,,O,,int,O,int,O,magic_shield,,,,,,,,,,,,,,,,,,,,,,,E
