@@ -29,17 +29,17 @@ E,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,E
 E,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,E
 E,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,E
 E,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,E
-E,,,,,,,,,,,,,,,,,,,,,,,,,,,,,spear_of_judgement_mana_cost,,,,,,,,,,,,,,,,,,,,,,,,,,E
-E,,,,,,,,,,,,,,,,,,,,,,,,,,,,,O,,,,,,,,,,,,,,,,,,,,,,,,,,E
-E,,,,,,,,,,,,,,,increase_healing,,,,,,,,start,,,,,,spear_of_judgement_mana_cost,,,,,,,,,,,,,,,,,,,,,,,,,,E
-E,,,,,,,,,,,,,,O,,O,,,,,,,O,,,,,,O,,,,,,,,,,,,,,,,,,,,,,,,,,E
-E,,,,,,,,,,,,,big_mana,,,,healing_aura,O,mana,O,increase_healing,O,purifying_fires,O,spell_damage,O,health,O,spear_of_judgement,O,spear_of_judgement_damage,O,spear_of_judgement_damage,,,,,,,,,,,,,,,,,,,,,,E
+E,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,E
+E,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,E
+E,,,,,,,,,,,,,,,increase_healing,,,,,,,,start,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,E
+E,,,,,,,,,,,,,,O,,O,,,,,,,O,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,E
+E,,,,,,,,,,,,,big_mana,,,,healing_aura,O,mana,O,increase_healing,O,purifying_fires,O,spell_damage,O,health,O,spear_of_judgement,,,,,,,,,,,,,,,,,,,,,,,,,,E
 E,,,,,,,,,,,,,,O,,O,O,,,,,,,,,,,,O,,,,,,,,,,,,,,,,,,,,,,,,,,E
-E,,,,,,,,,,,,,,,increase_healing,,,O,,,increase_healing,,[CENTER],,increase_healing,,,O,,,,,,,,,,,,,,,,,,,,,,,,,,,E
-E,,,,,,,,,,,,,,,,,,,O,,,O,,O,,,O,,,,,,,,,,,,,,,,,,,,,,,,,,,,E
-E,,,,,,,,,,,,,,,,,,,,mana_regen,,,holy_flower,,,health_regen,,,,,,,,,,,,,,,,,,,,,,,,,,,,,E
+E,,,,,,,,,,,,,,,increase_healing,,,O,,,mod_holy_flower_cure,,[CENTER],,mod_holy_flower_rest,,,O,,,,,,,,,,,,,,,,,,,,,,,,,,,E
+E,,,,,,,,,,,,,,,,,,,O,,O,,,,O,,O,,,,,,,,,,,,,,,,,,,,,,,,,,,,E
+E,,,,,,,,,,,,,,,,,,,,mana_regen,,,mod_holy_flower_dmg,,,health_regen,,,,,,,,,,,,,,,,,,,,,,,,,,,,,E
 E,,,,,,,,,,,,,,,,,,,,O,,,O,,,O,,,,,,,,,,,,,,,,,,,,,,,,,,,,,E
-E,,,,,,,,,,,,,,,,,,mana_regen,O,mana_regen,O,O,big_int,O,O,health_regen,O,mana_regen,,,,,,,,,,,,,,,,,,,,,,,,,,,E
+E,,,,,,,,,,,,,,,,,,mana_regen,O,mana_regen,O,O,holy_flower,O,O,health_regen,O,mana_regen,,,,,,,,,,,,,,,,,,,,,,,,,,,E
 E,,,,,,,,,,,,,,,,,,,,O,,,,,,O,,,,,,,,,,,,,,,,,,,,,,,,,,,,,E
 E,,,,,,,,,,,,,,,,,,,,O,,,,,,O,,,,,,,,,,,,,,,,,,,,,,,,,,,,,E
 E,,,,,,,,,,,,,,,,,,,,int,O,O,int,O,O,int,,,,,,,,,,,,,,,,,,,,,,,,,,,,,E
